--- a/index.html
+++ b/index.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wildlife</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
-</head>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <div class="wrapper">
-            <div class="header__wrapper">
-                <div class="header__logo">
-                    <a href="#" class="header__logo-link">
-                        <img src="../img/logo.svg" alt="Wildlife" class="logo-img">wildlife</a>
-                </div>
-                <div class="header__nav">
-                    <ul class="header__list">
-                        <li class="header__item"><a href="#" class="header__link">Blog</a></li>
-                        <li class="header__item"><a href="#" class="header__link">Contacts</a></li>
-                        <li class="header__item"><a href="#" class="header__link"> <img src="../img/search.png" alt="search"></a></li>
-                        <!--<li class="header__item"><input type="button" value="Sign In" class="1header__link"></li> -->
-                        <li class="header__item"><a href="##" class="header__link header__link-sign">Sign In</a></li>
-                    </ul>
-                </div>
-            </div>
+      <div class="wrapper">
+        <div class="header__wrapper">
+          <div class="header__logo">
+            <a href="#" class="header__logo-link">
+              <img src="img/logo.svg" alt="Wildlife" class="logo-img" />wildlife</a
+            >
+          </div>
+          <div class="header__nav">
+            <ul class="header__list">
+              <li class="header__item"><a href="#" class="header__link">Blog</a></li>
+              <li class="header__item"><a href="#" class="header__link">Contacts</a></li>
+              <li class="header__item">
+                <a href="#" class="header__link"> <img src="img/search.png" alt="search" /></a>
+              </li>
+              <li class="header__item">
+                <a href="##" class="header__link header__link-sign">Sign In</a>
+              </li>
+            </ul>
+          </div>
         </div>
-
+      </div>
     </header>
 
     <main class="main">
+      <div class="wrapper">
         <section class="survival">
-            <h1>Survival</h1>
-            <p>What this means is that we exist to help protect our environment and do in numbers of ways. You can save the planet by donation</p>
-            <button class="donate">Donate</button>
+          <h1>Survival</h1>
+          <p>
+            What this means is that we exist to help protect our environment and do in numbers of
+            ways. You can save the planet by donation
+          </p>
+          <button class="donate">Donate</button>
         </section>
+      </div>
     </main>
-</body>
-
+  </body>
 </html>
